GL/src/test/deca/syntax/valid/deca_sans_objet/int_ok.deca
// Description :
// test d’un littéral entier valide
//
// Resultat :
// ok

{
println("test d’un littéral entier valide");
42;
}