GL/src/test/deca/syntax/invalid/deca_sans_objet/else_sans_if.deca
// Description :
// test else sans if
//
// Resultat :
// Erreur syntaxique
// Ligne 8 : else sans if
{
    else {
        print(1);
    }
}
